@@ -1,5 +1,14 @@
 2013-05-16 Miguel de Dios <miguel.dedios@artica.es>
 
+	* operation/agentes/stat_win.php: disabled show events when the
+	pandora node is set replication events.
+	
+	Fixes: #2216
+	
+	* operation/events/events.php: improve the source code style.
+
+2013-05-16 Miguel de Dios <miguel.dedios@artica.es>
+
 	* ajax.php: fixed PHP warning when the HTTP_REFERER not set.
 	
 	* godmode/agentes/module_manager_editor_prediction.php,
